# fp-katas

./: .gitignore  README.md  pyproject.toml
src/python_katas/: __init__.py  kata1.py  kata10.py  kata2.py  kata3.py  kata4.py  kata5.py  kata6.py  kata7.py  kata8.py  kata9.py
src/python_katas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_kata1.py  test_kata10.py  test_kata2.py  test_kata3.py  test_kata4.py  test_kata5.py  test_kata6.py  test_kata7.py  test_kata8.py  test_kata9.py
